Fixed whitespace at bottom of the page
Cleaned up some code

--- a/src/components/App/index.css
+++ b/src/components/App/index.css
@@ -21,6 +21,7 @@
   background: #424242;
   font: 400 16px -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  height: 100%;
 }
 
 .dark a {
